--- a/guanabara/paginas/github.html
+++ b/guanabara/paginas/github.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="../estilos/redes.css">
 </head>
 <body>
-    <img src="../imagens/telagithub.jpeg" alt="github">
-    <a href="https://github.com/fabiohcf" target="_blank">&#x1f517;  Acesse aqui</a>
+    <img src="../imagens/tela-github.jpg" alt="github">
+    <a href="https://github.com/gustavoguanabara" target="_blank">Acesse aqui</a>
     
 </body>
 </html>
