--- a/paginas/home.html
+++ b/paginas/home.html
@@ -3,22 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>home</title>
     <style>
         * {
+            padding-top: 50px;
             margin: 0px;
-            padding: 0px;
         }
 
-        body {
-            background: url('../imagens/tela-home.jpg');
-            background-size: cover;
-            height: 100vh;
-            width: 100vw;
-        }
     </style>
 </head>
 <body>
-    
+    <div>
+        <!-- clock widget start -->
+        <script type="text/javascript"> var css_file=document.createElement("link"); css_file.setAttribute("rel","stylesheet"); css_file.setAttribute("type","text/css"); css_file.setAttribute("href","https://s.bookcdn.com//css/cl/bw-cl-150x70.css?v=0.0.1"); document.getElementsByTagName("head")[0].appendChild(css_file); </script> <div id="tw_1_743032813"><div style="width:150px; height:70px; margin: 0 auto;"><a href="https://ibooked.com.br/time/campina-grande-58745">Campina Grande</a><br/></div></div> <script type="text/javascript"> function setWidgetData_743032813(data){ if(typeof(data) != 'undefined' && data.results.length > 0) { for(var i = 0; i < data.results.length; ++i) { var objMainBlock = ''; var params = data.results[i]; objMainBlock = document.getElementById('tw_'+params.widget_type+'_'+params.widget_id); if(objMainBlock !== null) objMainBlock.innerHTML = params.html_code; } } } var clock_timer_743032813 = -1; widgetSrc = "https://widgets.booked.net/time/info?ver=2;domid=585;type=1;id=743032813;scode=66571;city_id=58745;wlangid=8;mode=0;details=0;background=a9a9a9;border_color=ffffff;color=01294f;add_background=ffffff;add_color=2071c9;head_color=ffffff;border=0;transparent=0"; var widgetUrl = location.href; widgetSrc += '&ref=' + widgetUrl; var wstrackId = ""; if (wstrackId) { widgetSrc += ';wstrackId=' + wstrackId + ';' } var timeBookedScript = document.createElement("script"); timeBookedScript.setAttribute("type", "text/javascript"); timeBookedScript.src = widgetSrc; document.body.appendChild(timeBookedScript); </script>
+        <!-- clock widget end -->
+    </div>
 </body>
 </html>
