--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/style.css">
     <title>Minhas Redes Sociais</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
         <section id="phone">
-            <iframe src="paginas/home.html" name="tela" id="tela" frameborder="0"></iframe>
-        </section>
+             <iframe src="paginas/home.html" name="tela" id="tela" frameborder="0"></iframe>
+             <!-- clock widget start -->
 
-        <section id="redes">
-            <a href="paginas/home.html" target="tela"> <img src="imagens/logo-home.jpg" alt="home"></a><br>
-            <a href="paginas/youtube.html" target="tela"> <img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
-            <a href="paginas/github.html" target="tela"> <img src="imagens/logo-github.jpg" alt="github"></a><br>
-            <a href="paginas/instagram.html" target="tela"> <img src="imagens/logo-instagram.jpg" alt="instagram"></a><br>
-            <a href="paginas/facebook.html" target="tela"> <img src="imagens/logo-facebook.jpg" alt="facebook"></a><br>
-            <a href="paginas/twitter.html" target="tela"> <img src="imagens/logo-twitter.jpg" alt="twitter"></a>
-
+            <div id="icones">
+                <a href="paginas/github.html" target="tela"><img src="imagens/github2.png" alt="github"></a>
+                <a href="index.html"><img src="imagens/botaohome.png" alt="home"></a>
+                <a href="paginas/linkedin.html" target="tela"><img src="imagens/linkedin.png" alt="linkedin"></a>
+            </div>
         </section>
+       
     </main>
-
+    <footer>
+        <P>Desenvolvido por Fábio Ferreira. <a href="paginas/creditos.html">i</a></P> 
+    </footer>
     
 </body>
 </html>
