--- a/paginas/linkedin.html
+++ b/paginas/linkedin.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>github</title>
+    <title>linkedin</title>
     <link rel="stylesheet" href="../estilos/redes.css">
 </head>
 <body>
-    <img src="../imagens/telagithub.jpeg" alt="github">
-    <a href="https://github.com/fabiohcf" target="_blank">&#x1f517;  Acesse aqui</a>
-    
+    <img src="../imagens/telalinkedin.jpeg" alt="linkedin">
+    <a href="https://www.linkedin.com/in/fabiohcf/">&#x1f517;  Acesse aqui</a>
 </body>
 </html>
+
