--- a/paginas/linkedin.html
+++ b/paginas/linkedin.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <img src="../imagens/telalinkedin.jpeg" alt="linkedin">
-    <a href="https://www.linkedin.com/in/fabiohcf/" target="_blank">&#x1f517;  Acesse aqui</a>
+    <a href="https://github.com/fabiohcf" target="_blank">&#x1f517;  Acesse aqui</a>
+    
 </body>
 </html>
 
