--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="icones">
                 <a href="paginas/github.html" target="tela"><img src="imagens/github2.png" alt="github"></a>
                 <a href="index.html"><img src="imagens/botaohome.png" alt="home"></a>
-                <a href="paginas/linkedin.html" target="tela"><img src="imagens/linkedin.png" alt="linkedin"></a>
+                <a href="paginas/linkedin.html"><img src="imagens/linkedin.png" alt="linkedin"></a>
             </div>
         </section>
     </main>
